# piano_amt

./: .gitignore  README.md  piano_amt.patch  pyproject.toml  requirements.txt
notebooks/: experiment.ipynb  experiment.qmd  piano_experiment.ipynb  piano_experiment.qmd
src/piano_live_inference/: __init__.py  deploy.py  gradio_app.py  realtime.py  sounddevice_stream.py
src/piano_modeling/: __init__.py  audio.py  benchmark.py  common.py  config.py  datasets.py  decoding.py  diagnostics.py  evaluation.py  export.py  frontend.py  inference.py  losses.py  lr_finder.py  maestro_cache.py  midi_labels.py  models.py  paths.py  profiling.py  sliced_cache.py  sliced_io.py  tensorboard_debug.py  tokenization.py  training.py
tests/: test_decoding_smoke.py  test_evaluation_smoke.py  test_model_decoder_smoke.py  test_tensorboard_debug_smoke.py  test_training_smoke.py
