[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piano_amt"
version = "0.1.0"
description = "automatic piano transcription experiments on MAESTRO"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "None" }
authors = [
  { name = "John Whalen" }
]
keywords = [
  "music transcription",
  "piano transcription",
  "maestro",
  "midi",
  "pytorch",
  "deep learning"
]

dependencies = [
  "numpy",
  "pandas",
  "torch",
  "torchaudio",
  "torchvision",
  "tqdm",
  "pretty_midi",
  "mido",
  "soundfile",
  "librosa",
  "scikit-learn",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black",
  "ipykernel",
  "jupyter",
]

colab = [
  "gdown",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
