[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piano_amt"
version = "0.1.0"
description = "automatic piano transcription experiments on MAESTRO"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "None" }
authors = [
  { name = "John Whalen" }
]
keywords = [
  "music transcription",
  "piano transcription",
  "maestro",
  "midi",
  "pytorch",
  "deep learning"
]

dependencies = [
  "numpy",
  "pandas",
  "torch",
  "torchaudio",
  "torchvision",
  "tqdm",
  "pretty_midi",
  "mido",
  "soundfile",
  "librosa",
  "scikit-learn",
  "matplotlib",
  "timm",
  "mir_eval",
]

[project.scripts]
piano-evaluate = "piano_modeling.evaluation:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black",
  "ipykernel",
  "jupyter",
  "tensorboard",
]

train = [
  "remotezip",
  "nnAudio",
  "tensorboard",
]

live = [
  "gradio",
  "sounddevice",
]

colab = [
  "gdown",
  "remotezip",
  "nnAudio",
  "tensorboard",
]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["piano_modeling*", "piano_live_inference*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
